v1.0.3 - Not released yet.
 - Check user can run sudo before actually attempting a switch.

v1.0.2 - 18/06/2013
 - Version command line option is now more useful.
 - Errors are printed to stderr instead of stdout.
 - Support for non-templated target/payload proxy names.
 - Fix a bug that causes "No such file" almost instantly for some VOs.
 - Raise the full exception on major internal errors.

v1.0.1 - 17/06/2013
 - Minor fixes in the documentation.
 - New GS_BLOCKED_USERS setting to ignore requests from certain accounts.

v1.0.0 - 15/06/2013
 - Initial release.
